# gtkapps

./: flake.nix  main.c  meson.build  result  style.css
